# Cadence-Music

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SETUP.md
build-aux/: org.cadence.Cadence.yml
crates/app/: Cargo.toml
crates/app/src/: application.rs  main.rs  mpris.rs  window.rs
crates/app/src/playback/: mod.rs  player.rs  queue.rs
crates/app/src/services/: library_service.rs  mod.rs
crates/app/src/ui/: albums_view.rs  artist_detail.rs  artists_view.rs  artwork.rs  context_menu.rs  empty_state.rs  library_home.rs  metadata_dialog.rs  mod.rs  now_playing.rs  organize_dialog.rs  player_bar.rs  playlists_view.rs  preferences.rs  queue_view.rs  search_results.rs  songs_view.rs  style.css
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  paths.rs
crates/core/src/artwork/: mod.rs
crates/core/src/db/: library.rs  mod.rs  schema.rs
crates/core/src/lookup/: mod.rs
crates/core/src/metadata/: mod.rs  tags.rs
crates/core/src/organization/: mod.rs  plan.rs  template.rs
crates/core/src/scanner/: mod.rs  watcher.rs
data/: org.cadence.Cadence.desktop  org.cadence.Cadence.metainfo.xml
data/brand/: README.md
docs/: ARCHITECTURE.md  FAQ.md  INSTALL.md  README.md  RELEASES.md  ROADMAP.md  SPEC_CHECKLIST.md  TODO.md
docs/assets/: README.md
scripts/: build-flatpak.sh  run-debug.sh
