[package]
name = "cadence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A modern, native music library application for Linux"
default-run = "cadence"

[[bin]]
name = "cadence"
path = "src/main.rs"

[dependencies]
cadence-core = { path = "../core" }

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

gtk.workspace = true
adw.workspace = true
glib.workspace = true
gio.workspace = true
gstreamer.workspace = true
mpris-server.workspace = true
