[package]
name = "cadence-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for Cadence: database, scanning, metadata and organization"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
lofty.workspace = true
walkdir.workspace = true
notify.workspace = true
rayon.workspace = true
sha2.workspace = true
dirs.workspace = true
ureq.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile = "3"
